src/stylesheet.css
:root {
  --section-background: #FFF;
  --text: #292929;
  --text-2: #757575;
  --button-bg: #292929;
  --button-text: var(--section-background);
  --button-bg-hover: #FF672B;
  --button-text-hover: var(--section-background);
  --button-outline-hover: var(--button-bg);
  --focus-outline: #FF932B;

  --anim-delay: 0.3s;
  --anim-duration: 0.6;
}

@media (prefers-color-scheme: dark) {
  :root {
    --section-background: #292929;
    --text: #EEE;
    --text-2: #919191;
    --button-bg: #EEE;
    --button-text: #292929;
    --button-bg-hover: #FF672B;
    --button-text-hover: var(--button-bg);
    --button-outline-hover: var(--button-bg);
    --focus-outline: #FF932B;
  }
}

@font-face {
  font-family: "CoreSans";
  font-weight: bold;
  src: url("/Core\ Sans\ CR\ 75\ ExtraBold.ttf") format("opentype")
}

@font-face {
  font-family: "CoreSans";
  font-weight: normal;
  src: url("/Core\ Sans\ CR\ 55\ Medium.ttf") format("opentype")
}

/* animated background images */

#backgrounds {
  pointer-events: none;
  user-select: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1000;
  width: 100vw;
  height: 100vh;
}

#backgrounds > img {
  position: fixed;
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  opacity: 0;
  transition-property: opacity;
  transition-duration: 2.5s;
  transition-timing-function: ease-in-out;
}

/* general layout stuff */

body {
  width: 100%;
  min-height: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  background-image: linear-gradient(90deg, #FF672B, #FFA92B);
}

main {
  position: relative;
  width: fit-content;
  display: flex;
  align-items: stretch;
  flex-direction: column;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  margin: 2rem;
  gap: 2rem;
}

@keyframes animLogoContainer {
  0% {
    background-color: rgba(255, 255, 255, 0);
  }

  33% {
    opacity: 1;
    width: 15rem;
    height: 15rem;
    background-color: #FFF;
  }

  50% {
    opacity: 1;
    width: 100%;
    height: 15rem;
    box-shadow: 0 0 0 rgba(0,0,0,0);
  }

  66% {
    opacity: 1;
    top: 50%;
    width: 100%;
    height: 100%;
    background-color: var(--section-background);
    box-shadow: 0 5px 10px rgba(0,0,0,0.5);
  }

  100% {
    opacity: 0;
    top: 50%;
    width: 100%;
    height: 100%;
    background-color: var(--section-background);
    box-shadow: 0 5px 10px rgba(0,0,0,0.5);
  }
}

@keyframes animLogo {
  0% {
    opacity: 1;
  }

  99% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes animMain {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

main > :not(#logoAnim) {
  --se-padding: 1rem;

  opacity: 0;
  animation-name: animMain;
  animation-timing-function: cubic-bezier(0,.65,.5,1);
  animation-delay: calc((3s * var(--anim-duration)) + var(--anim-delay));
  animation-fill-mode: both;
  animation-duration: calc(1s * var(--anim-duration));

  font-family: "CoreSans";
  background-color: var(--section-background);
  color: var(--text);
  max-width: 600px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: var(--se-padding);
  gap: var(--se-padding);
  border-radius: 0.75rem;
  contain: content;
  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
}

#logoAnim {
  width: 15rem;
  height: 15rem;
  top: 0px;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(255, 255, 255, 0);
  opacity: 1;

  animation-name: animLogoContainer;
  animation-timing-function: cubic-bezier(0,.65,.5,1);
  animation-delay: calc((1s * var(--anim-duration)) + var(--anim-delay));
  animation-fill-mode: both;
  animation-duration: calc(3s * var(--anim-duration));
  
  position: absolute;
  border-radius: 0.75rem;
  overflow: hidden;
}

#logoAnim > * {
  opacity: 1;
  animation-name: animLogo;
  animation-timing-function: linear;
  animation-delay: calc((1s * var(--anim-duration)) + var(--anim-delay));
  animation-fill-mode: both;
  animation-duration: calc(1s * var(--anim-duration));

  height: 100%;
}

h1, h2, h3, h4, h5 {
  font-family: "CoreSans";
  font-weight: bold;
  text-align: center;
  margin: 0;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 26px;
}

p {
  font-family: "CoreSans";
  font-weight: normal;
  font-size: 19px;
  color: var(--text-2);
  text-align: center;
  margin: 0.2em;
}

a {
  color: var(--focus-outline);
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  outline: 10px solid transparent;
  outline-offset: 10px;
  border-radius: 0.1em;
}

a:hover {
  color: var(--text);
}

a:focus, a:focus-visible {
  color: var(--text);
  outline: 3px solid var(--focus-outline);
  outline-offset: 3px;
}

/* header */

header {
  align-items: center;
}

header > img {
  width: 33%;
}

@media screen and (max-width: 600px) {
  header > img {
    width: 44%;
  }
}

header > img:hover {
  transform: scaleX(-100%);
}

/* buttons */

.button-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: var(--se-padding);
}

.button-list > a {
  --b-padding: 0.25em;

  position: relative;
  width: 33%;
  height: 3em;
  flex-grow: 1;
  background-color: var(--button-bg);
  border-radius: 0.25em;
  border: 3px solid var(--button-bg);
  letter-spacing: 0.5px;
  box-sizing: border-box;
  word-wrap: anywhere;
  vertical-align: middle;
  text-decoration: none;
  font-size: 18px;
  color: var(--button-text);
  overflow: hidden;
  padding: var(--b-padding);
  -webkit-hyphens: manual;
  hyphens: manual;
  -webkit-hyphenate-character: " ";
  hyphenate-character: " ";
}

.button-list > a:hover {
  background-color: var(--button-bg-hover);
  border: 3px solid var(--button-outline-hover);
  color: var(--button-text-hover);
}

.button-list > a > span, .button-list > a > .icon {
  position: absolute;
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  box-sizing: border-box;
  width: calc(100% - (var(--b-padding) * 2));
  height: calc(100% - (var(--b-padding) * 2));
}

.button-list > a > span {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/* button labels are offset and have variable opacity if it has a .icon class element as a sibling */
/* cus it looks cool lmao */

.button-list > a > .icon ~ span {
  opacity: 0;
  transform: translateY(25%);
}

.button-list > a:hover > .icon ~ span {
  opacity: 1;
  transform: translateY(0%);
  text-decoration: underline;
}

.button-list > a > .icon {
  -webkit-mask-size: contain;
  mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  background-color: var(--button-text);
  opacity: 1;
  transform: translateY(0%);
}

.button-list > a:hover > .icon {
  background-color: var(--button-text-hover);
  opacity: 0;
  transform: translateY(-25%);
}

/* cohost */

#li-cohost > .icon {
  -webkit-mask-image: url("../assets/social-icon-cohost.svg");
  mask-image: url("../assets/social-icon-cohost.svg");
}

#li-cohost:hover {
  background-color: #83254F;
}

/* discord */

#li-discord > .icon {
  -webkit-mask-image: url("../assets/social-icon-discord.svg");
  mask-image: url("../assets/social-icon-discord.svg");
}

#li-discord:hover {
  background-color: #5865F2;
}

/* retrospring */

#li-retrospring > .icon {
  -webkit-mask-image: url("../assets/social-icon-retrospring.svg");
  mask-image: url("../assets/social-icon-retrospring.svg");
}

#li-retrospring:hover {
  background-color: #5e35b1;
}

/* tumblr */

#li-tumblr > .icon {
  -webkit-mask-image: url("../assets/social-icon-tumblr.svg");
  mask-image: url("../assets/social-icon-tumblr.svg");
}

#li-tumblr:hover {
  background-color: #34526F;
}

/* github */

#li-github > .icon {
  -webkit-mask-image: url("../assets/social-icon-github.svg");
  mask-image: url("../assets/social-icon-github.svg");
}

#li-github:hover {
  background-color: #161b22;
}

/* steam */

#li-steam > .icon {
  -webkit-mask-image: url("../assets/social-icon-steam.svg");
  mask-image: url("../assets/social-icon-steam.svg");
}

#li-steam:hover {
  background-color: #28313F;
}

/* youtube */

#li-youtube > .icon {
  -webkit-mask-image: url("../assets/social-icon-youtube.svg");
  mask-image: url("../assets/social-icon-youtube.svg");
}

#li-youtube:hover {
  background-color: #FF3333;
}

/* email */

#li-email > .icon {
  -webkit-mask-image: url("../assets/social-icon-email.svg");
  mask-image: url("../assets/social-icon-email.svg");
}

#li-email:hover {
  background-color: #6D4AFF;
}

